Implement initial "menu extra" support
There are still a couple of issues, that need addressing:
1. The application window is partially placed outside of the screen,
   when the icon in placed near the screen edge
2. First appearance on a second screen seems to first misplace the
   window
3. The icon should be a template image on macos, not a color icon

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,11 @@ body {
   cursor: default;
 }
 
+body,
+html {
+  background-color: transparent;
+}
+
 body {
   font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
 }
